--- a/html/index.html
+++ b/html/index.html
@@ -2,6 +2,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Puppet stage</title>
+	<link rel="icon" type="image/png" sizes="192x192" href="favicon.png">
 </head>
 <body>
 
